--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" rel="external nofollow" /> 
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <title>my-app</title>
   </head>
   <body>
